src/app/blog/layout.module.scss
.board {
    h1 {
        margin: auto;
        margin-bottom: 1rem;
        width: 120px;
        text-align: center;
    }

    ul {
        margin: auto;
        width: 100%;
        padding: 0;

        li {
            margin-bottom: 1rem;
        }

        a {
            display: flex;
            padding: 0.5rem;
            justify-content: left;
            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
            border-radius: 0.5rem;
            transition: 0.3s cubic-bezier(0.47, 0, 0.745, 0.715);

            .board-item-info {
                height: 100%;
                width: 100%;
                padding: 2rem;

                h2 {
                    margin-bottom: 1rem;
                }
            }
            
            &:hover {
                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
                background-color: var(--gray-color);
                transform: translateY(-0.2rem);
            }


        }
    }
}

@media ( max-width: 1200px ) {
    .board {
        padding-left: 0px;
        ul {
            padding: 1rem;
            width: 100%;
        }
    }
}

@media ( min-width : 1200px ) {
    .board {
        ul {
            width: 1000px;
        }
    }
}

